<resources>
    <string name="app_name">CalorieCounter</string>

    <string name="day">Today</string>
    <string name="text_day_calculation">Limit- eaten calories = left today</string>
    <string name="text_calories_left">Calories left</string>
    <string name="text_day_label_name">Name</string>
    <string name="text_day_label_calories">Calories</string>
    <string name="card_item_name">bread</string>
    <string name="card_item_calories">calories</string>

    <string name="popup_add_new">Add new meal</string>
    <string name="popup_name">Name (optional)</string>
    <string name="popup_calories">Calories</string>
    <string name="popup_barcode">Barcode scan (optional)</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="action_settings">Settings</string>
    <string name="Save">save</string>
    <string name="settings_calorie_limit">Your daily calorie limit</string>
    <string name="settings_username">Your name</string>
    <string name="settings_header">Change your settings</string>
    <string name="text_view_welcome">Hello in Calorie Counter</string>
    <string name="buttons_splash_screen">Start counting</string>
    <string name="delete_entry">Delete entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="food">Food</string>
    <string name="excercise">Exercise</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="delete_confirmation_text">Are you sure you want to delete entry?</string>
    <string name="delete_confirmation_title">Delete entry</string>
    <string name="export">Export</string>
    <string name="import_data">Import</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="confirmation_text_import">Are you sure to Import data?</string>
    <string name="confirmation_text_export">Are you sure to Export data?</string>
    <string name="confirmation_text">Are you sure?</string>
    <string name="value_empty_error">You need to enter value</string>
    <string name="left_text_main_screen">left</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="kcal">kcal</string>
    <string name="toolbar_main_title">Calories Counter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_settings_title">Change your setting</string>
    <string name="setting">setting</string>
    <string name="hint">type here</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="action_favorites">Favorites</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="your_data">Records data</string>
    <string name="your_profile">Profile</string>
    <string name="action_register">Register</string>
    <string name="registration_name">Name</string>
    <string name="registration_age">Age</string>
    <string name="button_register">Register</string>
    <string name="registration_text">Type just your username and password (twice) then click \"Register\"</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_confirmation">Password ( Re-Type )</string>
    <string name="error_name_must_not_be_blank">Name musn\'t be blank</string>
    <string name="error_password_doesnt_match">Password has to be the same in both fields</string>
    <string name="error_password_cannot_be_blank">Password cannot be blank</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="user_created_successfully">User Created Successfully</string>


</resources>
