<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/text_view_dialog_text_import_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_text"
        android:layout_marginBottom="@dimen/spacer_large"
        android:textSize="@dimen/subheader_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel_import_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/dialog_ok_import_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>