<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/new_entry_dialog_height">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_entry_dialog_height"
        android:padding="@dimen/spacer_small"
        android:paddingStart="@dimen/spacer_large"
        android:paddingEnd="@dimen/spacer_large"
        tools:context=".favorites.NewFavouriteDialogFragment">

        <TextView
            android:id="@+id/text_view_add_new_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/spacer_small"
            android:paddingBottom="@dimen/spacer_medium"
            android:text="@string/popup_add_new"
            android:textSize="@dimen/text_medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_calories_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below='@id/text_view_add_new_favourite'
            android:hint="@string/popup_calories"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_calories_favourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890-+()*/."
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below='@id/text_input_layout_calories_favourite'
            android:hint="@string/popup_name"
            app:errorEnabled="true">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/text_input_name_favourite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinner_category_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_layout_name_favourite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_add_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />
        </LinearLayout>


    </RelativeLayout>
</LinearLayout>