<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/spacer_large"
        android:paddingEnd="@dimen/spacer_large"
        tools:context=".SettingsFragment">

        <TextView
            android:id="@+id/text_view_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:textSize="@dimen/text_medium" />

        <Button
            android:id="@+id/text_view_calories_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below='@id/text_view_welcome'
            android:layout_margin="@dimen/spacer_large"
            android:text="@string/settings_header"
            android:textSize="@dimen/text_medium" />

         <Button
            android:id="@+id/text_view_name_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below='@id/text_view_calories_settings'
            android:layout_margin="@dimen/spacer_large"
            android:text="@string/settings_header"
            android:textSize="@dimen/text_medium" />




        <Button
            android:id="@+id/button_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below='@id/text_view_name_settings'
            android:text="@string/export" />

        <Button
            android:id="@+id/button_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below='@id/button_export'
            android:text="@string/import_data" />


    </RelativeLayout>
</LinearLayout>